--- a/Apresentacao/src/main/java/br/edu/ifnmg/apresentacao/CompraRegistro.form
+++ b/Apresentacao/src/main/java/br/edu/ifnmg/apresentacao/CompraRegistro.form
@@ -193,6 +193,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Remover"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton2ActionPerformed"/>
+      </Events>
     </Component>
     <Container class="javax.swing.JScrollPane" name="jScrollPane3">
       <AuxValues>
@@ -233,6 +236,9 @@
               <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="tblItemMouseClicked"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
