--- a/Apresentacao/src/main/java/br/edu/ifnmg/apresentacao/ProdutoBuscar.form
+++ b/Apresentacao/src/main/java/br/edu/ifnmg/apresentacao/ProdutoBuscar.form
@@ -3,6 +3,8 @@
 <Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JInternalFrameFormInfo">
   <Properties>
     <Property name="closable" type="boolean" value="true"/>
+    <Property name="iconifiable" type="boolean" value="true"/>
+    <Property name="maximizable" type="boolean" value="true"/>
     <Property name="title" type="java.lang.String" value="Buscar Produto"/>
   </Properties>
   <SyntheticProperties>
@@ -86,6 +88,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Novo Produto"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnNovoProdutoActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnLimpar">
       <Properties>
