--- a/Apresentacao/src/main/java/br/edu/ifnmg/apresentacao/ProdutoEditar.form
+++ b/Apresentacao/src/main/java/br/edu/ifnmg/apresentacao/ProdutoEditar.form
@@ -38,10 +38,7 @@
                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                   <Component id="txtDescricao" min="-2" pref="417" max="-2" attributes="0"/>
                                   <Component id="txtNome" min="-2" pref="417" max="-2" attributes="0"/>
-                                  <Group type="102" alignment="0" attributes="0">
-                                      <Component id="lblId" min="-2" pref="32" max="-2" attributes="0"/>
-                                      <EmptySpace min="-2" pref="385" max="-2" attributes="0"/>
-                                  </Group>
+                                  <Component id="lblId" alignment="0" min="-2" pref="32" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                           <Group type="102" attributes="0">
@@ -54,7 +51,6 @@
                                   <Component id="txtEstoque" min="-2" pref="114" max="-2" attributes="0"/>
                                   <Component id="txtValorU" min="-2" pref="114" max="-2" attributes="0"/>
                               </Group>
-                              <EmptySpace min="-2" pref="300" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
